// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snackbar component supports snackbar with action button 1`] = `
"<div
  class=\\"mdc-snackbar\\"
>
  <div
    class=\\"mdc-snackbar__surface\\"
  >
    <div
      aria-live=\\"polite\\"
      class=\\"mdc-snackbar__label\\"
      role=\\"status\\"
    >
      foo
    </div>
    <div
      class=\\"mdc-snackbar__actions\\"
    >
      <button
        class=\\"mdc-button mdc-snackbar__action\\"
        type=\\"button\\"
      >
        <div
          class=\\"mdc-button__ripple\\"
        />
        <span
          class=\\"mdc-button__label\\"
        >
          bar
        </span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`Snackbar component supports snackbar with action button 2`] = `
"<div
  class=\\"mdc-snackbar mdc-snackbar--stacked\\"
>
  <div
    class=\\"mdc-snackbar__surface baz\\"
  >
    <div
      aria-live=\\"polite\\"
      class=\\"mdc-snackbar__label\\"
      role=\\"status\\"
    >
      foo
    </div>
    <div
      class=\\"mdc-snackbar__actions\\"
    >
      <button
        class=\\"mdc-button mdc-snackbar__action\\"
        type=\\"button\\"
      >
        <div
          class=\\"mdc-button__ripple\\"
        />
        <span
          class=\\"mdc-button__label\\"
        >
          bar
        </span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`Snackbar component supports snackbar with action button 3`] = `
"<div
  class=\\"mdc-snackbar mdc-snackbar--leading\\"
>
  <div
    class=\\"mdc-snackbar__surface\\"
  >
    <div
      aria-live=\\"polite\\"
      class=\\"mdc-snackbar__label\\"
      role=\\"status\\"
    >
      foo
    </div>
    <div
      class=\\"mdc-snackbar__actions\\"
    >
      <button
        class=\\"mdc-button mdc-snackbar__action\\"
        type=\\"button\\"
      >
        <div
          class=\\"mdc-button__ripple\\"
        />
        <span
          class=\\"mdc-button__label\\"
        >
          bar
        </span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`Snackbar component supports snackbar without action button 1`] = `
"<div
  class=\\"mdc-snackbar\\"
>
  <div
    class=\\"mdc-snackbar__surface\\"
  >
    <div
      aria-live=\\"polite\\"
      class=\\"mdc-snackbar__label\\"
      role=\\"status\\"
    />
  </div>
</div>"
`;

exports[`Snackbar component supports snackbar without action button 2`] = `
"<div
  class=\\"mdc-snackbar mdc-snackbar--leading\\"
>
  <div
    class=\\"mdc-snackbar__surface baz\\"
  >
    <div
      aria-live=\\"polite\\"
      class=\\"mdc-snackbar__label\\"
      role=\\"status\\"
    />
  </div>
</div>"
`;
